--- a/retroLedScreen/platformio.ini
+++ b/retroLedScreen/platformio.ini
@@ -12,3 +12,5 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_deps =
+    fastLED = https://github.com/FastLED/FastLED.git
