--- a/retroLedScreen/platformio.ini
+++ b/retroLedScreen/platformio.ini
@@ -12,6 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 115200d
 lib_deps =
     fastLED = https://github.com/FastLED/FastLED.git
